kubernetes/apps/headlamp/headlamp/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headlamp
  namespace: headlamp
  labels:
    app: headlamp
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: headlamp
  template:
    metadata:
      labels:
        app: headlamp
    spec:
      restartPolicy: Always
      containers:
        - name: headlamp
          image: ghcr.io/headlamp-k8s/headlamp:v0.42.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4466
              name: http
          resources:
            requests:
              memory: 64Mi
              cpu: 50m
            limits:
              memory: 256Mi
              cpu: 200m
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
