kubernetes/apps/headlamp/headlamp/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: headlamp
  namespace: headlamp
  labels:
    app: headlamp
spec:
  type: ClusterIP
  selector:
    app: headlamp
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
