kubernetes/apps/headlamp/headlamp/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  namespace: headlamp
spec:
  hostnames:
    - headlamp.garage.neo-tix.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: headlamp
          namespace: headlamp
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
